add live FLX sync rule control
